--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <a class="footer-link" href="Coming-soon.html">LinkedIn</a>
           <a class="footer-link" href="https://twitter.com/HPoop69">Twitter</a>
           <a class="footer-link" href="Coming-soon.html">Website</a>
-          <p>© Lincoln Zhu</p>
+          <p>© Lincoln Z</p>
         </div>
 </body>
 
